--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "dist/app.js",
   "scripts": {
-    "build": "tsc ",
-    "start": " node dist/app.js",
+    "build": "tsc",
+    "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.16.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "eslint": "^8.27.0",
@@ -25,7 +26,10 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "@types/node": "^18.11.9",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "nodemon": "^2.0.20"
   },
   "keywords": [],
   "description": ""
