--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
+    "debug": "nodemon --exec \"node --inspect-brk=localhost:3000 --require ts-node/register src/server.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.16.1",
+    "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
@@ -23,11 +25,11 @@
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.0",
     "prettier": "2.7.1",
+    "ts-node": "^10.9.1",
     "tslint": "^5.12.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@types/node": "^18.11.9",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "nodemon": "^2.0.20"
